--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>RDAP Lookup</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./assets/bootstrap.min.css" />
-    <link rel="shortcut icon" href="./assets/shortcut-icon.svg" />
+    <link rel="stylesheet" href="./assets/bootstrap.min.css?v=2021112213" />
+    <link rel="shortcut icon" href="./assets/shortcut-icon.svg?v=2021112213" />
     <style>
       dd {
         margin: 0.5em 0 1em 2em;
