--- a/index.html
+++ b/index.html
@@ -1061,10 +1061,10 @@
       <p><strong>Notes:</strong></p>
 
       <ul>
-        <li>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</li>
         <li>As of November 22 2021, this page uses the IANA bootstrap registries natively for domains, ASNs and entities, so only the registry/registrar RDAP server sees your queries for those object types. For now, RDAP.org is still used for IP queries.</li>
-        <li>Queries for top-level domains and ICANN-accredited registrars do not use the IANA bootstrap registries; instead these queries are sent to the {root,registrars}.rdap.org servers.</li>
-        <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the registries if you have any issues with the contents of RDAP responses.</li>
+        <li>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</li>
+        <li>There is no bootstrap registry for top-level domains or ICANN-accredited registrars; instead these queries are sent to the {root,registrars}.rdap.org servers.</li>
+        <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the registries/registrars if you have any issues with the contents of RDAP responses.</li>
         <li>The RDAP Web Client is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a href="https://gitlab.centralnic.com/centralnic/rdap-web-client">click here</a>.</li>
       </ul>
 
