--- a/index.html
+++ b/index.html
@@ -1060,11 +1060,12 @@
       <p><strong>Notes:</strong></p>
 
       <ul>
+        <li><a href="https://about.rdap.org" target="_new">Click here</a> for more information about what RDAP is and how it differs from traditional Whois.</li>
         <li>As of November 24 2021, this page uses the IANA bootstrap registries natively for all query types!</li>
-        <li>To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</li>
-        <li>There is no bootstrap registry for top-level domains or ICANN-accredited registrars; instead these queries are sent to the {root,registrars}.rdap.org servers.</li>
-        <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the registries/registrars if you have any issues with the contents of RDAP responses.</li>
-        <li>The RDAP Web Client is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a href="https://gitlab.centralnic.com/centralnic/rdap-web-client">click here</a>.</li>
+        <li>Most generic TLDs now support RDAP, but only a few ccTLDs have deployed RDAP so far. To see which TLDs support RDAP, <a href="https://deployment.rdap.org" target="_new">click here</a>.</li>
+        <li>There is no bootstrap registry for top-level domains or ICANN-accredited registrars; instead these queries are sent to the <a href="https://about.rdap.org/#additional" target="_new">{root,registrars}.rdap.org servers</a>.</li>
+        <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the relevant registry or registrar if you have an issue with the content of an RDAP response.</li>
+        <li>The RDAP Web Client is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a rel="noopener" target="_new" href="https://gitlab.centralnic.com/centralnic/rdap-web-client">click here</a>.</li>
         <li>This page uses <a rel="noopener" target="_new" href="https://github.com/whitequark/ipaddr.js/">ipaddr.js</a> by <a rel="noopener" target="_new" href="https://whitequark.org/">whitequark</a>.</li>
       </ul>
 
