--- a/index.html
+++ b/index.html
@@ -1049,8 +1049,26 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark shadow-sm">
-      <span class="text-white font-weight-bold" style="font-size:larger">RDAP Lookup</span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <span class="text-white font-weight-bold" style="font-size:larger">
+        <a class="navbar-brand" href="#">RDAP.ORG</a>
+      </span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar1">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="https://about.rdap.org/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="https://client.rdap.org/">Web Client</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://deployment.rdap.org/">Deployment Dashboard</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <br/>
